--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-html {
+html, body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+
 }
 
 #header {
@@ -20,8 +24,7 @@ html {
 
 #calculator {
     display: block;
-    background-color: rgb(26, 26, 26);
-
+    background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='45.03' height='39' viewBox='0 0 34.64101615137755 30' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(26, 32, 44,1)'/%3E%3Cpath d='M-20-20h200v200h-200M26.41 29.75L25.98 29.5L25.55 29.75L25.55 30.25L25.98 30.5L26.41 30.25zM9.09 29.75L8.66 29.5L8.23 29.75L8.23 30.25L8.66 30.5L9.09 30.25zM0.43 14.75L0 14.5L-0.43 14.75L-0.43 15.25L0 15.5L0.43 15.25zM9.09-0.25L8.66-0.5L8.23-0.25L8.23 0.25L8.66 0.5L9.09 0.25zM26.41-0.25L25.98-0.5L25.55-0.25L25.55 0.25L25.98 0.5L26.41 0.25zM35.07 14.75L34.64 14.5L34.21 14.75L34.21 15.25L34.64 15.5L35.07 15.25zM17.75 14.75L17.32 14.5L16.89 14.75L16.89 15.25L17.32 15.5L17.75 15.25z' fill='rgba(26, 32, 44,1)'/%3E%3Cpath d='M-20-20h200v200h-200M37.21 25.25L28.98 20.5L20.75 25.25L20.75 34.75L28.98 39.5L37.21 34.75zM19.89 25.25L11.66 20.5L3.43 25.25L3.43 34.75L11.66 39.5L19.89 34.75zM11.23 10.25L3 5.5L-5.23 10.25L-5.23 19.75L3 24.5L11.23 19.75zM19.89-4.75L11.66-9.5L3.43-4.75L3.43 4.75L11.66 9.5L19.89 4.75zM37.21-4.75L28.98-9.5L20.75-4.75L20.75 4.75L28.98 9.5L37.21 4.75zM45.87 10.25L37.64 5.5L29.41 10.25L29.41 19.75L37.64 24.5L45.87 19.75zM54.53 25.25L46.3 20.5L38.07 25.25L38.07 34.75L46.3 39.5L54.53 34.75zM28.55 40.25L20.32 35.5L12.09 40.25L12.09 49.75L20.32 54.5L28.55 49.75zM2.57 25.25L-5.66 20.5L-13.89 25.25L-13.89 34.75L-5.66 39.5L2.57 34.75zM2.57-4.75L-5.66-9.5L-13.89-4.75L-13.89 4.75L-5.66 9.5L2.57 4.75zM28.55-19.75L20.32-24.5L12.09-19.75L12.09-10.25L20.32-5.5L28.55-10.25zM54.53-4.75L46.3-9.5L38.07-4.75L38.07 4.75L46.3 9.5L54.53 4.75zM45.87 40.25L37.64 35.5L29.41 40.25L29.41 49.75L37.64 54.5L45.87 49.75zM11.23 40.25L3 35.5L-5.23 40.25L-5.23 49.75L3 54.5L11.23 49.75zM-6.09 10.25L-14.32 5.5L-22.55 10.25L-22.55 19.75L-14.32 24.5L-6.09 19.75zM11.23-19.75L3-24.5L-5.23-19.75L-5.23-10.25L3-5.5L11.23-10.25zM45.87-19.75L37.64-24.5L29.41-19.75L29.41-10.25L37.64-5.5L45.87-10.25zM63.19 10.25L54.96 5.5L46.73 10.25L46.73 19.75L54.96 24.5L63.19 19.75zM28.55 10.25L20.32 5.5L12.09 10.25L12.09 19.75L20.32 24.5L28.55 19.75z' fill='rgba(82, 25, 25,0.81)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ")
 }
 
 #setup {
@@ -32,21 +35,36 @@ html {
     display: none;
 }
 
+.myBarGray span {
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    text-align: center;
+    width: 100%;
+    color: white;
+    transform: translate(-50%, 0);
+}
+
 #myBar {
-    width:0%;
+    z-index: 1;
+    position: absolute;
+    width: 0%;
+    height: 20px;
     background-color: red;
     border-radius: 25px;
     text-align: center;
     color:white;
 }
 
-
-
 .myBarGray {
+    position: relative;
     width:100%;
-    background-color: gray;
+    height: 20px;
+    background-color: rgb(51, 51, 51);
     border-radius: 25px;
     margin: 10px;
+    text-align: center;
+    color:white;
 }
 
 .tab-button {
@@ -76,19 +94,6 @@ html {
     transform: translate(-50%, 0%);
     text-align: center;
     width: 90%;
-}
-
-.triple-column {
-    width: 75%;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0%);
-  }
-
-.column {
-    float: left;
-    width: 33.33%;
-   
 }
 
 .radio-button {
@@ -123,7 +128,7 @@ html {
 }
   
 .radio-button input[type="radio"]:checked+label, .Checked+label {
-    background: green;
+    background: rgb(100, 0, 30);
 }
 
 #calculator h1, #calculator h2 {
@@ -143,19 +148,8 @@ html {
 }
   
 #submit-button:hover {
-    background-color: gray;
-    color: white;
-}
-
-#submit-button:active {
-    background-color: green;
-    color: white;
-}
-
-#active-tab {
-    background-color: gray;
-    border: 1px solid black;
-    color: white;
+    background-color: white;
+    color: red;
 }
 
 .season-button {
@@ -177,6 +171,7 @@ table {
     margin-left: auto;
     margin-right: auto;
     width: 100%;
+    color: white;
 }
 
 td, th {
@@ -187,10 +182,16 @@ td, th {
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd;
+    background-color: #242424;
 }
 
-body {font-family: Arial, Helvetica, sans-serif;}
+tr:nth-child(odd) {
+    background-color: #1a1a1a;
+}
+
+table button {
+    color:black;
+}
 
 /* The Modal (background) */
 .modal {
@@ -330,4 +331,24 @@ p img {
 
 .pfp-select input[type="radio"]:checked + label {
     border: 1px solid red;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+s
+/* Track */
+::-webkit-scrollbar-track {
+  background: #252525;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: red;
 }
