--- a/css/style.css
+++ b/css/style.css
@@ -302,12 +302,26 @@ p img {
     background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='29' height='29' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(135)'%3E%3Crect width='100%25' height='100%25' fill='rgba(26, 29, 46,1)'/%3E%3Cpath d='M-10 30h60v4h-60zM-10-10h60v4h-60' fill='rgba(107, 30, 42,0.41)'/%3E%3Cpath d='M-10 18h60v4h-60zM-10-22h60v4h-60z' fill='rgba(60, 54, 107,0.25)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ");
     margin: 5% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
     width: 25%; /* Could be more or less, depending on screen size */
     color: white;
+    vertical-align: middle;
 }
 
-.login_window-content .row{
+.login_window-content a {
+    color:rgb(152, 179, 255);
+    font-size: 14px;
+}
+
+.login_window-content input {
+    color: black;
+}
+
+.login_window-content input[type=submit] {
+    color: white;
+    font-weight: 600;
+}
+
+.login_window-content .row {
     margin-top: 20px;
 }
   
@@ -322,10 +336,10 @@ p img {
     font-size: 28px;
 }
 
-.button-to-login {
+.button-to-login,
+.button-to-register {
     transition-duration: 0.5s;
     background-color: red;
-
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -334,7 +348,7 @@ p img {
     cursor: pointer;
     width: 100px;
     border-radius: 10px;
-height: 30px;
+    height: 30px;
 }
 
 .close:hover,
