--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* ITU F1 Delta Time Calculator */
+/* file with css styles */
+/* Author: Kodousek Ondrej - xkodou00 */
+/* Author: Janciar Marek - xjanci14 */
+/* Author: Zavodsky Lubomir - xzavod14 */
+
 html, body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
